--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resubase.me",
-  "version": "0.3.1",
+  "version": "1.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
