--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resubase.me",
-  "version": "5.16.6",
+  "version": "7.17.6",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,7 +15,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
-    "@types/node": "20.5.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
@@ -28,12 +29,12 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
 }
